# autogen

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  setup.py
.github/workflows/: ci.yml  cmake.yml
basics/getting-started/: index.html
basics/reference/: index.html
basics/vectorization/: index.html
docs/: index.md
docs/basics/: getting-started.md  index.md  reference.md  vectorization.md
examples/: CMakeLists.txt  basic_codegen.cpp  loop_codegen.cpp  regex_testing.cpp  test_autogen_lightweight.cpp
include/autogen/: autogen.hpp  autogen_lightweight.hpp
include/autogen/cg/: loop_atomic_fun.hpp  loop_fun_bridge.hpp
include/autogen/cg/compact/: compact_codegen.h  compact_language.hpp  compact_lib_function.hpp  compact_library.hpp  compact_model.hpp  compact_variable_name_gen.hpp
include/autogen/cg/compiler/: clang_compiler.hpp  clang_cuda_compiler.hpp  gcc_compiler.hpp  nvcc_compiler.h
include/autogen/core/: base.hpp  codegen.hpp  cppadcg_system.h  cppadcg_user.hpp  generated_codegen.h  generated_codegen.hpp  generated_cppad.hpp  generated_numerical.hpp  target.hpp  target_type.hpp  types.h  types.hpp
include/autogen/cuda/: cuda_codegen.hpp  cuda_codegen_for0.hpp  cuda_codegen_for1.hpp  cuda_codegen_jacobian.hpp  cuda_codegen_rev1.hpp  cuda_function.hpp  cuda_function_sourcegen.hpp  cuda_language.hpp  cuda_library.hpp  cuda_library_processor.hpp  cuda_model.hpp  cuda_variable_name_gen.hpp
include/autogen/utils/: cache.h  conditionals.hpp  crc.hpp  file_utils.hpp  filesystem.hpp  stopwatch.hpp  system.h  system.hpp
python/: CMakeLists.txt  autogen_python.cpp  common.hpp  main.cpp
python/autogen/: __init__.py
python/examples/: basic_codegen.py  test_tds.py
python/tests/: test_adfun.py  test_autogen.py  test_scalar.py
search/: search_index.json
src/: autogen.cpp  cache.cpp  compact_codegen.cpp  compact_codegen_for0.cpp  compact_codegen_for1.cpp  compact_codegen_jacobian.cpp  compact_codegen_rev1.cpp  compact_codegen_sparse_jac.cpp  compact_model_source_gen.cpp  compact_target.cpp  cppadcg_system.cpp  cuda_target.cpp  generated_codegen.cpp  legacy_c_target.cpp  nvcc_compiler.cpp  openmp_target.cpp  system.cpp
test/: CMakeLists.txt  test_basic_codegen.cpp
